1. 添加新的资源爬虫  2. switch代码优化  3. profile隐私问题